# rpg_quadrotor_control

./: .clang-format  .clangd  README.md  dependencies.yaml
control/autopilot/: CMakeLists.txt  package.xml
control/autopilot/include/autopilot/: autopilot.h  autopilot_helper.h  autopilot_inl.h
control/position_controller/: CMakeLists.txt  package.xml
control/position_controller/include/position_controller/: position_controller.h
gui/rqt_quad_gui/: CMakeLists.txt
quad_launch_files/: CMakeLists.txt  package.xml
simulation/rpg_rotors_interface/: CMakeLists.txt  package.xml
simulation/rpg_rotors_interface/include/rpg_rotors_interface/: rpg_rotors_interface.h
simulation/rpg_rotors_interface/launch/basics/: base_quad_simulation.launch
simulation/rpg_rotors_interface/src/: rpg_rotors_interface.cpp
test/rpg_quadrotor_integration_test/: CMakeLists.txt  package.xml
test/rpg_quadrotor_integration_test/src/: rpg_quadrotor_integration_test.cpp
trajectory_planning/polynomial_trajectories/: CMakeLists.txt  package.xml
trajectory_planning/polynomial_trajectories/include/polynomial_trajectories/: constrained_polynomial_trajectories.h  minimum_snap_trajectories.h  polynomial_trajectories_common.h  polynomial_trajectory.h
trajectory_planning/trajectory_generation_helper/: CMakeLists.txt  package.xml
trajectory_planning/trajectory_generation_helper/include/trajectory_generation_helper/: circle_trajectory_helper.h  polynomial_trajectory_helper.h
